updated plotting; edited errors

--- a/getting-started-spatial-data.ipynb
+++ b/getting-started-spatial-data.ipynb
@@ -175,7 +175,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%matplotlib inline #tells matplotlib to print to Jupyter\n",
+    "%matplotlib inline \n",
+    "#tells matplotlib to print to Jupyter\n",
+    "\n",
     "chicago_bnb.plot()"
    ]
   },
@@ -231,47 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chicago_bnb.plot(column='price_pp', cmap='magma')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***Wait, where is the legend?***"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "########## HACK ############ \n",
-    "# adapted from https://stackoverflow.com/questions/36008648/colorbar-on-geopandas\n",
-    "## add a color bar\n",
-    "## colormap options: https://matplotlib.org/users/colormaps.html\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "# add colorbar that is normalized vmin to vmax\n",
-    "def add_color_bar(map_object, variable_column, cmap_string):\n",
-    "    vmin, vmax = variable_column.min(),  variable_column.min(),\n",
-    "    fig = map_object.get_figure()\n",
-    "    cax = fig.add_axes()\n",
-    "    sm = plt.cm.ScalarMappable(cmap=cmap_string, norm=plt.Normalize(vmin=vmin, vmax=vmax))\n",
-    "    # fake up the array of the scalar mappable\n",
-    "    sm._A = []\n",
-    "    fig.colorbar(sm, cax=cax)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chic_price_pp = chicago_bnb.plot(column='price_pp', cmap='magma')\n",
-    "add_color_bar(chic_price_pp, chicago_bnb['price_pp'], 'magma')"
+    "chicago_bnb.plot(column='price_pp', cmap='magma', legend=True)"
    ]
   },
   {
@@ -279,6 +241,15 @@
    "metadata": {},
    "source": [
     "# Scatterplots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
@@ -340,8 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_thefts_map = chicago_bnb.plot(column='num_theft', cmap='magma')\n",
-    "add_color_bar(num_thefts_map, chicago_bnb['num_theft'], 'magma')"
+    "num_thefts_map = chicago_bnb.plot(column='num_theft', cmap='magma', legend=True)"
    ]
   },
   {
@@ -359,8 +329,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "per_person_thefts_map = chicago_bnb.plot(column='thefts_per_capita', cmap='magma')\n",
-    "add_color_bar(num_thefts_map, chicago_bnb['thefts_per_capita'], 'magma')"
+    "per_person_thefts_map = chicago_bnb.plot(column='thefts_per_capita', cmap='magma', legend=True)"
    ]
   },
   {
@@ -370,8 +339,7 @@
    "outputs": [],
    "source": [
     "chicago_bnb['crimes_per_capita'] = chicago_bnb['num_crimes']/chicago_bnb['population']\n",
-    "num_crimes_map = chicago_bnb.plot(column='crimes_per_capita', cmap='magma')\n",
-    "add_color_bar(num_crimes_map, chicago_bnb['crimes_per_capita'], 'magma')"
+    "num_crimes_map = chicago_bnb.plot(column='crimes_per_capita', cmap='magma', legend=True)"
    ]
   },
   {
@@ -519,7 +487,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chicago_bnb.plot(column='price_pp')"
+    "chicago_bnb.plot(column='price_pp', legend=True)"
    ]
   },
   {
