edit seaborn example to ensure no error

--- a/getting-started-spatial-data.ipynb
+++ b/getting-started-spatial-data.ipynb
@@ -293,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.pairplot(chicago_bnb[['response_r','accept_r', 'price_pp']])"
+    "sns.pairplot(chicago_bnb[['response_r','accept_r', 'price_pp']].dropna())"
    ]
   },
   {
