update to moran's I

--- a/getting-started-spatial-data.ipynb
+++ b/getting-started-spatial-data.ipynb
@@ -397,6 +397,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "chicago_bnb = chicago_bnb.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "chicago_weights = pysal.weights.Rook.from_dataframe(chicago_bnb)"
    ]
   },
